# wclicker

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: app.rs  clicker.rs  config.rs  groups.rs  hotkey.rs  main.rs  state.rs
