[package]
name = "wclicker"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simple, lightweight autoclicker for Linux"

[[bin]]
name = "wclicker"
path = "src/main.rs"

[dependencies]
eframe = "0.29"
egui = "0.29"
evdev = "0.12"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.6"

[profile.release]
opt-level = 3
strip = true
lto = true
